chore: Work in progress with Claude rewriting.

--- a/docs/30-user-guide/140-sso.md
+++ b/docs/30-user-guide/140-sso.md
@@ -1,24 +1,23 @@
 
-# SSO session.
+# SSO Session
 
-Up to now, we have been prompted with a login dialog each time we issued a `kc token ....` command.
+Until now, we have been prompted with a login dialog each time we issued a `kc token ...` command.
 
-On the Kubauth login page, there is a checkbox `Remember me`.
+On the Kubauth login page, there is a "Remember me" checkbox:
 
 ![login](../assets/kubauth-login2.png){ .center width="50%" }
 
-If checked, a session cookie is set, the subsequent login attempt will go through using same user.
+When checked, a session cookie is set, and subsequent login attempts will proceed automatically using the same user credentials.
 
-You can easily check this by launching several `kc token ....`.
+You can verify this by launching several `kc token ...` commands.
 
-The session cookie is related only to the login page. It is independant of the client application.
-This means you have a cross-application Single Sign On.
+The session cookie is associated only with the login page and is independent of the client application. This enables cross-application Single Sign-On (SSO).
 
-### logout
+### Logout
 
-What if you want now to login with another user credential ? 
+What if you want to log in with different user credentials?
 
-Obviously, you must first logout. This can be achieved with another `kc` subcommand:
+You must first log out. This can be accomplished with another `kc` subcommand:
 
 ``` { .shell .copy }
 kc logout --issuerURL https://kubauth.ingress.kubo6.mbp 
@@ -28,15 +27,15 @@ No OIDC configuration found in kubeconfig
 Opening browser to logout endpoint: https://kubauth.ingress.kubo6.mbp/oauth2/logout
 ```
 
-Don't care about the first message, related to kubeconfig. This will be explained later, in Kubernetes integration
+Disregard the first message about kubeconfig. This will be explained later in the [Kubernetes integration](../50-kubernetes-integration/140-workstation-setup.md) section.
 
-As prompted, a browser should pop-up to call a specif cleanup URL.
+As indicated, a browser should open to call the logout URL.
 
 ![logout](../assets/kubauth-logout1.png){ .center width="80%" }
 
-## Sessions storage
+## Session Storage
 
-Session are persisted as Kubernetes resources:
+Sessions are persisted as Kubernetes resources:
 
 ``` { .bash .copy }
 kubectl -n kubauth-sso get ssosessions
@@ -47,11 +46,11 @@ h-6d4d8f33c407a727857ba335d257a04d6d0116c40fa81c26903bb9469139563c   john    Joh
 h-d13bc676b003a200aca5051558b2cd21eccb44f557bee058df00aa3eb6d2bd22   jim                2025-10-28T00:19:13Z   65s
 ```
 
-Manually deleting such entry is another method to end the session.
+Manually deleting a session resource is an alternative method to terminate a session.
 
 ## Configuration
 
-SSO configuration be modified by setting a helm chart configuration value:
+SSO configuration can be modified using Helm chart values:
 
 ???+ abstract "values.yaml"
 
@@ -67,6 +66,6 @@ SSO configuration be modified by setting a helm chart configuration value:
         sticky: true
     ```
 
-- `namespace` will allow to change the namespace where SSO sessions are persisted. And allow its creation at Kubauth deployment.
-- `lifetime` set the session duration. This is an absolute duration. There is no idle timeout.
-- `sticky` true means session cookie is permanent. If false, the session will be lost on browser close.
+- `namespace`: Specifies the namespace where SSO sessions are persisted, and enables its creation during Kubauth deployment.
+- `lifeTime`: Sets the session duration. This is an absolute duration with no idle timeout.
+- `sticky`: When true, the session cookie is persistent. When false, the session expires when the browser is closed.
