feat: Reference and kc re-ordering

--- a/docs/70-kc/160-jwt.md
+++ b/docs/70-kc/160-jwt.md
@@ -201,13 +201,13 @@ If the output shows malformed JSON, the token may be corrupted or incomplete.
 
 ## Related Commands
 
-- [`kc token`](token.md) - Get tokens with `-d` flag for automatic decoding
-- [`kc token-nui`](token-nui.md) - Get tokens in terminal
-- [`kc whoami`](whoami.md) - Display decoded token from kubectl context
+- [`kc token`](130-token.md) - Get tokens with `-d` flag for automatic decoding
+- [`kc token-nui`](140-token-nui.md) - Get tokens in terminal
+- [`kc whoami`](170-whoami.md) - Display decoded token from kubectl context
 
 ## See Also
 
 - [Tokens and Claims](../30-user-guide/120-tokens-and-claims.md)
-- [User Reference](../60-references/user.md)
+- [User Reference](../60-references/120-user.md)
 - [JWT Specification](https://jwt.io/introduction)
 
