--- a/docs/70-kc/160-jwt.md
+++ b/docs/70-kc/160-jwt.md
@@ -18,7 +18,9 @@ echo <token> | kc jwt
 
 ## Arguments
 
-### `[token]` (string, optional)
+### `[token]` 
+string - optional
+
 The JWT token to decode. If not provided as an argument, reads from stdin.
 
 ## Examples
@@ -87,62 +89,12 @@ The decoder adds `_human` suffixed fields for timestamp claims:
 !!! note
     The `*_human` fields are added by the decoder for convenience and are not part of the actual JWT token.
 
-## Use Cases
-
-### Inspect Token Claims
-
-```bash
-# Get token and decode in one command
-kc token --issuerURL https://kubauth.example.com --clientId public -d
-
-# Or pipe explicitly
-kc token --issuerURL https://kubauth.example.com --clientId public --onlyIDToken | kc jwt
-```
-
-### Verify User Information
-
-```bash
-# Check which user and groups are in the token
-kc token --issuerURL https://kubauth.example.com --clientId public --onlyIDToken | \
-  kc jwt | grep -E '"sub"|"groups"'
-```
-
-### Debug Token Issues
-
-```bash
-# Check if expected claims are present
-TOKEN=$(kc token-nui --issuerURL https://kubauth.example.com --clientId public \
-  --login john --password john123 --onlyIDToken)
-echo $TOKEN | kc jwt | grep "office"
-```
-
-### Verify Token Expiration
-
-```bash
-kc token --issuerURL https://kubauth.example.com --clientId public --onlyIDToken | \
-  kc jwt | grep exp_human
-```
-
-### Compare Tokens
-
-```bash
-# Token for user 1
-kc token-nui --issuerURL https://kubauth.example.com --clientId public \
-  --login alice --password alice123 --onlyIDToken | kc jwt > alice-token.json
-
-# Token for user 2
-kc token-nui --issuerURL https://kubauth.example.com --clientId public \
-  --login bob --password bob123 --onlyIDToken | kc jwt > bob-token.json
-
-# Compare claims
-diff alice-token.json bob-token.json
-```
-
 ## JWT Structure
 
 ### Header
 
 Contains token metadata:
+
 - `alg` - Signing algorithm (e.g., RS256)
 - `kid` - Key ID used for signing
 - `typ` - Token type (JWT)
@@ -152,6 +104,7 @@ Contains token metadata:
 Contains claims (user information):
 
 **Standard OIDC Claims:**
+
 - `sub` - Subject (username)
 - `iss` - Issuer URL
 - `aud` - Audience (client ID)
@@ -160,23 +113,26 @@ Contains claims (user information):
 - `auth_time` - Authentication time
 
 **Kubauth-Added Claims:**
+
 - `name` - User's full name
 - `email` - Primary email
 - `emails` - All emails
 - `groups` - Group memberships
 
 **Custom Claims:**
+
 - Any claims from User or Group `spec.claims`
 
 ## Limitations
 
 ### No Signature Verification
 
-The `kc jwt` command only decodes the token; it does not verify the signature. For signature verification, use your application's JWT library or online tools like [jwt.io](https://jwt.io).
+The `kc jwt` command only decodes the token; it does not verify the signature. 
 
 ### Base64 Decoding Only
 
 This command simply base64-decodes the JWT parts. It doesn't validate:
+
 - Token expiration
 - Issuer authenticity
 - Signature validity
@@ -203,7 +159,7 @@ If the output shows malformed JSON, the token may be corrupted or incomplete.
 
 - [`kc token`](130-token.md) - Get tokens with `-d` flag for automatic decoding
 - [`kc token-nui`](140-token-nui.md) - Get tokens in terminal
-- [`kc whoami`](170-whoami.md) - Display decoded token from kubectl context
+- [`kc whoami`](170-whoami.md) - With -d option, display decoded token from kubectl context
 
 ## See Also
 
